# getopts

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
include/getopts/: getopts.hpp
lib/getopts/: CMakeLists.txt  getopts.cpp
